--- a/mojaTeretana/mojaTeretana/src/main/resources/messages.properties
+++ b/mojaTeretana/mojaTeretana/src/main/resources/messages.properties
@@ -5,21 +5,36 @@ lang.sr = Serbian
 email=Email
 lozinka= Password
 treninzi=Training
-imeTreninga= Name
+nazivTreninga= Name
 kratakOpisTreninga= Training description
 cenaTreninga = Training price
 trener = Coach
 vrstaTreninga = Type of training
+korisnickoIme = Username
 nivoTreninga =  Training level
 trajanjeTreninga = Training duration
+imeTreninga = Name 
+datumIVremeTermina = Date and time
+dodajTermin = Add date
+naziv = Name
+cena = The price
+termin = Date
+tekstKomentara = Comment description
+dodajKomentar = Add comment
+datumIVremeRegistracije = Date and time
 prosecnaOcena =  Average grade
 dodajTrening =  Add training
-dodajTermin = Add date
+dodajTerminTreninga = Add date
 logOut = Log out
 profil = Profile
 korisnici = Users
+izmeniKorisnika = Change user
+datumIVreme = Date and time
+dodajTerminTreniga = Add training date
+kratakOpis = Description
 sale = Halls
 komentari = Comments
+clanskeKarta = Membership card
 clanskeKarte = Membership cards
 oznakaSale = Hall designation
 kapacitet = Capacity
@@ -33,7 +48,7 @@ username = Username
 opcija = Option
 sala = Hall
 odobri = Approve
-terminiTreninga = Training date
+termini = Training date
 datumiVreme = Date and time
 ime = Name
 prezime = LastName
