--- a/mojaTeretana/mojaTeretana/src/main/resources/messages_sr.properties
+++ b/mojaTeretana/mojaTeretana/src/main/resources/messages_sr.properties
@@ -3,28 +3,42 @@ lang.change = Promenite jezik
 lang.eng = Engleski
 lang.sr = Srpski
 email=Email
+korisnickoIme = KorisnickoIme
 lozinka= Lozinka
 treninzi=Treninzi
-imeTreninga= Naziv
+nazivTreninga= Naziv
 kratakOpisTreninga= Opis treninga
 cenaTreninga = Cena treninga
+imeTreninga = Ime treninga
 trener = Trener
+naziv = Naziv
+cena = Cena
+termin = Termin
+datumIVremeTermina = Datum i vreme termina
+tekstKomentara = Tekst komentara
+dodajKomentar = Dodaj komentar
+datumIVremeRegistracije = Datum i vreme
 vrstaTreninga = Vrsta treninga
 nivoTreninga = Nivo treninga
 trajanjeTreninga = Trajanje treninga
 prosecnaOcena = Prosecna ocena
 dodajTrening = Dodaj trening
-dodajTermin = Dodaj termin
+dodajTerminTreninga = Dodaj termin
+dodajTermin = Dodaj termin treninga
 logOut = Izloguj se
 profil = Profil
 korisnici = Korisnici
 ime = Ime
 Prezime = Prezime
 sale = Sale
+clanskeKarta = Clanska karta
 komentari = Komentari
 clanskeKarte = Clanske karte
 oznakaSale = Oznaka sale
 kapacitet = Kapacitet
+izmeniKorisnika = Izmeni korisnika
+dodajTerminTreniga = Dodaj termin treninga
+datumIVreme = Datum i vreme
 korpa = Korpa
 clanskaKarta = Clanska karta
 clanskeKarte = Clanske karte
@@ -56,6 +70,7 @@ terminTreninga = Termin treninga
 Zakazitermin = Zakazite termin
 infoOTreningu = Informacije o treningu
 opis = Opis
+termini = Termini
 tipTreninga = Tip treninga
 uloga = Uloga
 anoniman = Anoniman
