fixing more bugs

--- a/mojaTeretana/mojaTeretana/src/main/resources/messages.properties
+++ b/mojaTeretana/mojaTeretana/src/main/resources/messages.properties
@@ -19,6 +19,10 @@ dodajTermin = Add date
 naziv = Name
 cena = The price
 termin = Date
+brojPoena = Points
+datum = Date
+text = Text
+obrisana = delete
 tekstKomentara = Comment description
 dodajKomentar = Add comment
 datumIVremeRegistracije = Date and time
