--- a/mojaTeretana/mojaTeretana/src/main/resources/messages_sr.properties
+++ b/mojaTeretana/mojaTeretana/src/main/resources/messages_sr.properties
@@ -14,6 +14,10 @@ trener = Trener
 naziv = Naziv
 cena = Cena
 termin = Termin
+text = Text
+obrisana = Obrisi
+datum = Datum
+brojPoena = Broj poena
 datumIVremeTermina = Datum i vreme termina
 tekstKomentara = Tekst komentara
 dodajKomentar = Dodaj komentar
